# pyPlay

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
Old_client_code/: asset_consumer.py  asset_owner.py  connection.py
old_tests/: name_test.py  test.py  test_annotations.py  test_comments.py  test_likes.py  test_tags.py
src/: except.py  except2.py
src/egeria_client/: __main__.py  admin_services.py  assetLib.py  asset_consumer.py  client.py  config.py  config.toml  connection.py  platform_services.py  util_exp.py  utils.py
tests/: pytest.ini  test_client.py  test_connection.py  test_http_requests.py  test_platform_services.py  test_util_exp.py
