# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdr-client"
version = "0.0.1"
description = "A prototype python client for Egeria"
# todo:  review the syntax of the following line ..
#authors = [ { "PDR", email = "info@pdr-associates.com"}]
license = { file = "LICENSE"}

classifiers = [
    "License :: OSI Approved :: Apache License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["metadata management", "egeria", "catalog"]
dependencies = [

    'tomli; python_version < "3.11"',
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://pdr-associates.com"

[project.scripts]
